# kgfx

./: .CMakeLists.txt.swp  .gitignore  .kgfx.h.swp  .main.c.swp  CMakeLists.txt  LICENSE  Makefile  README.md  assetsvertex.spv  common.h  kgfx  kgfx-examples  kgfx-testing  kgfx.cpp  kgfx.h  kgfx.hpp  kgfx.sln  kgfx.vcxproj  kgfx_c.c  kgfx_cpp.cpp  kgfx_objc.m  linmath.h  main.c  prism-vs.sln  prism-vs.vcxproj  prism-vs.vcxproj.filters  prism.c  prism.cpp  prism.h  prism.hpp  prism.m  shader.frag.spv.h  shader.vert.spv.h  shader_glsl.frag  shader_glsl.vert  test.py
.github/workflows/: c-cpp.yml
assets/: fragment.glsl  fragment.spv  mesh.gltf  testf.glsl  testf.spv  testv.glsl  testv.spv  vertex.glsl  vertex.spv
bindings/java/project/src/: Main.java
bindings/java/project/src/com/krisvers/kgfx/: KGFXcommandlist.java  KGFXdescriptorsetdesc.java  KGFXpipeline.java  KGFXpipelinelayout.java  KGFXshader.java  KGFXwindow.java
bindings/java/project/src/math/: Matrix.java  Vector.java
bindings/java/src/: kgfx_java.c
include/kgfx/: kgfx.h
include/kgfx_gh/: kgfx_gh.h
java/: Makefile  kgfx.exp  kgfx.idb  kgfx.lib  kgfx_gh.lib  kgfx_java.exp  kgfx_java.ilk  kgfx_java.lib  libkgfx.dylib  libkgfx_gh.dylib  libkgfx_gh_java.dylib  libkgfx_java.dylib
java/project/src/: Main.java
java/project/src/com/krisvers/kgfx/: KGFX.java  KGFXbuffer.java  KGFXcommandlist.java  KGFXcontext.java  KGFXdescriptorsetdesc.java  KGFXjni.java  KGFXpipelineattribute.java  KGFXpipelinebinding.java  KGFXpipelinelayout.java  KGFXwindow.java
java/project/src/com/krisvers/kgfxgh/: KGFXGHjni.java
java/src/: kgfx_gh_java.c  kgfx_gh_java.m  kgfx_java.c
kgfx/include/kgfx/: kgfx.h  kgfx_platform.h  kgfx_types.h
kgfx/src/kgfx/: kgfx_d3d12.cpp  kgfx_metal.mm  kgfx_vulkan.cpp
kgfx/src/kgfx_gh/: kgfx_gh_cocoa.m
lib/include/: linmath.h  stb_image.h
lib/include/glad/: glad.h
lib/src/: glad.c
lib/vs/x86/: vulkan-1.lib
python/: Makefile  kgfx.py  kgfx_gh.py  libkgfx.dylib  libkgfx_gh.dylib  triangle.py
samples/: Makefile
samples/triangle/: triangle.c
shaders/: compile_all.bat  compile_glsl_spv.bat  compile_hlsl_dxbc.bat  compile_hlsl_dxil.bat
shaders/src/: shader.frag.glsl  shader.hlsl  shader.vert.glsl
src/: current.c  example_current.c  example_hlsl.c  example_texture.c  example_triangle.c  example_uniforms.c  examples.h  kgfx_gh.h  kgfx_gh_cocoa.m  kgfx_gh_win32.c  kgfx_gh_xlib.c  main.c
src/kgfx/: kgfx.h  kgfx_d3d12.cpp  kgfx_dummy.c  kgfx_metal.m  kgfx_metal.mm  kgfx_opengl.cpp  kgfx_types.h  kgfx_vulkan.cpp
src/kgfx_gh/: kgfx_gh_cocoa.m  kgfx_gh_win32.c  kgfx_gh_xlib.c
x64/Debug D3D12/: kgfx.exe.recipe  vc143.idb
x64/Debug D3D12/kgfx.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  kgfx.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
